--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <script src="../node_modules/aws-sdk/dist/aws-sdk.min.js"></script>
-  <script src="../node_modules/amazon-cognito-identity-js/dist/aws-cognito-sdk.min.js"></script>
-  <script src="../node_modules/amazon-cognito-identity-js/dist/amazon-cognito-identity.min.js"></script>
+  <script src="https://sdk.amazonaws.com/js/aws-sdk-2.53.0.min.js"></script>
+  <script src="https://drive.google.com/open?id=0B09nQNbJx5uMX0k1OUM1WkdYWE0"></script>
+  <script src=".https://drive.google.com/open?id=0B09nQNbJx5uMdFNjS0RlTmpPaTA"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
