--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.53.0.min.js"></script>
-  <script src="https://drive.google.com/open?id=0B09nQNbJx5uMX0k1OUM1WkdYWE0"></script>
-  <script src=".https://drive.google.com/open?id=0B09nQNbJx5uMdFNjS0RlTmpPaTA"></script>
+  <script src="https://cdn.rawgit.com/aws/amazon-cognito-identity-js/master/dist/aws-cognito-sdk.min.js"></script>
+  <script src="https://cdn.rawgit.com/aws/amazon-cognito-identity-js/master/dist/amazon-cognito-identity.min.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
